<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_add_schedule_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:text="@string/add_schedule"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="25dp"></TextView>

    <ImageView
        android:id="@id/dialog_add_schedule_image_view"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_below="@+id/dialog_add_schedule_text_view"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_schedule"></ImageView>
    <EditText
        android:id="@+id/dialog_schedule_date_edit_text"
        android:hint="Chọn ngày dạy"
        android:height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/dialog_add_schedule_text_view"
        android:layout_toRightOf="@+id/dialog_add_schedule_image_view"
        android:layout_width="match_parent"
        android:focusable="false"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/dialog_add_schedule_subject_imgv"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/dialog_schedule_date_edit_text"
        android:src="@drawable/ic_subject"></ImageView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_schedule_subject_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_toRightOf="@id/dialog_add_schedule_subject_imgv"
        android:layout_below="@+id/dialog_schedule_date_edit_text"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:hint="@string/subject">
    <AutoCompleteTextView
        android:id="@+id/dialog_add_schedule_subject_autocomplete"
        android:layout_width="match_parent"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/dialog_add_schedule_subject"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_below="@+id/dialog_add_schedule_subject_imgv"
        android:src="@drawable/ic_class_1"></ImageView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_subject_class_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_toRightOf="@id/dialog_add_schedule_subject"
        android:layout_below="@+id/dialog_add_schedule_subject_dropdown"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/classroom">
        <AutoCompleteTextView
            android:id="@+id/dialog_add_schedule_subject_class_autocomplete"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content"

            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/dialog_add_schedule_shift"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_below="@+id/dialog_add_schedule_subject"
        android:src="@drawable/ic_class"></ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_shift_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_subject_class_dropdown"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/dialog_add_schedule_subject"
        android:focusable="false"

        android:hint="@string/shift">

        <AutoCompleteTextView
            android:id="@+id/dialog_shift_autocomplete"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/dialog_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_shift_dropdown"
        android:text="@string/Ok"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@id/dialog_cancel_btn"
        />

    <Button
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_shift_dropdown"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"

        android:text="@string/cancel" />
</RelativeLayout>